fixing gap for content

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -121,7 +121,7 @@
   .project-title {
   }
   .content-padding { 
-    @apply p-6 md:p-12 xl:p-16 gap-6 xl:gap-16;
+    @apply p-6 md:p-12 xl:p-16 gap-6 xl:gap-16 md:gap-12;
   }
   .content-vertical-padding {
     @apply px-6 md:px-12 xl:px-16 gap-6 xl:gap-16 md:gap-12;
